# uc-online

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CROSS_COMPILE_GUIDE.md  IniConfig.cs  IniConfig_crossplatform.cs  Logger.cs  Program.cs  Program64.cs  Program_crossplatform.cs  README.md  README_crossplatform.md  build.bat  build.sh  build_windows.bat  readme.md  test_build.sh  uc-online.cs  uc-online.csproj  uc-online.sln  uc-online.slnx  uc-online64.cs  uc-online64.csproj  uc-onlineLauncher.csproj  uc-onlineLauncher64.csproj  uc_onlineLauncher_crossplatform.csproj  uc_online_crossplatform.cs  uc_online_crossplatform.csproj
.github/workflows/: build.yml
include/: error_dialog.hpp  ini_config.hpp  logger.hpp  p2pauth.h  path_utils.hpp  steam_api_interfaces.h  uc_online.hpp  uc_online64.hpp
src/: dllmain.cpp  dllmain64.cpp  error_dialog.cpp  ini_config.cpp  logger.cpp  main.cpp  main64.cpp  p2pauth.cpp  resources.rc  steam_api_interfaces.cpp  uc_online.cpp  uc_online64.cpp  winmm_proxy.def  winmm_stubs.cpp
